--- a/code/dev/parts/domains/_list.html
+++ b/code/dev/parts/domains/_list.html
@@ -59,7 +59,7 @@
               <div class="pull-left">
                 <a ui-sref=".new" class="btn btn-success" ng-disabled="_loading">
                   <i class="glyphicon glyphicon-plus"></i>&nbsp;
-                  Add new Domain
+                  Add New Domain
                 </a>
               </div>
 
@@ -98,7 +98,7 @@
                 <span class="sortorder" ng-show="filter.predicate === 'cname'" ng-class="{reverse: filter.reverse}"></span>
               </th>
               <th>
-                <a href="" ng-click="order('updated_at')">Last updated</a>
+                <a href="" ng-click="order('updated_at')">Last Updated</a>
                 <span class="sortorder" ng-show="filter.predicate === 'updated_at'" ng-class="{reverse: filter.reverse}"></span>
               </th>
               <th class="thin">Status</th>
