--- a/code/dev/parts/domains/new.html
+++ b/code/dev/parts/domains/new.html
@@ -18,7 +18,7 @@
                  ng-disabled="_loading"
                  class="btn btn-info">
                 <i class="glyphicon glyphicon-arrow-left"></i>&nbsp;
-                Back to List
+                Back To List
               </a>
             </div>
           </div>
