--- a/code/dev/parts/keys/dialog/create.html
+++ b/code/dev/parts/keys/dialog/create.html
@@ -1,5 +1,5 @@
 <div class="modal-header">
-  <h3 class="modal-title">Please select account</h3>
+  <h3 class="modal-title">Please Select Account</h3>
 </div>
 <div class="modal-body">
 
