--- a/code/dev/parts/keys/list.html
+++ b/code/dev/parts/keys/list.html
@@ -31,7 +31,7 @@
               <div class="pull-left">
                 <button ng-click="openCreateDialog()" class="btn btn-success" ng-disabled="_loading">
                   <i class="glyphicon glyphicon-plus"></i>&nbsp;
-                  Add new API Key
+                  Add New API Key
                 </button>
               </div>
 
@@ -62,7 +62,7 @@
                 <span class="sortorder" ng-show="filter.predicate === 'key'" ng-class="{reverse: filter.key}"></span>
               </th>
               <th>
-                <a href="" ng-click="order('read_only_status')">Read only</a>
+                <a href="" ng-click="order('read_only_status')">Read Only</a>
                 <span class="sortorder" ng-show="filter.predicate === 'read_only_status'" ng-class="{reverse: filter.read_only_status}"></span>
               </th>
               <th>
