--- a/code/dev/parts/profile/activity-log.html
+++ b/code/dev/parts/profile/activity-log.html
@@ -5,7 +5,7 @@
   </div>
   <div class="modal-body">
     <div class="row">
-      <div class="col-md-3 strong">Date/time</div>
+      <div class="col-md-3 strong">Date/Time</div>
       <div class="col-md-9">{{model.datetime | date : 'MMM dd, yyyy H:mm:ss a'}}</div>
     </div>
     <div class="row">
