--- a/code/dev/parts/domains/_new.html
+++ b/code/dev/parts/domains/_new.html
@@ -14,11 +14,11 @@
         <div class="row">
           <div class="col-md-12">
             <div class="pull-left">
-              <a ui-sref="{{state}}"
+              <a ui-sref="^"
                  ng-disabled="_loading"
                  class="btn btn-info">
                 <i class="glyphicon glyphicon-arrow-left"></i>&nbsp;
-                Back to List
+                Back To List
               </a>
             </div>
           </div>
@@ -33,7 +33,7 @@
                    class="col-sm-2 control-label"
                    popover-trigger="mouseenter"
                    popover="Enter here a website/API domain name to be served by RevAPM"
-                   >Domain name</label>
+                   >Domain Name</label>
 
             <div class="col-sm-10">
               <input type="text"
@@ -42,7 +42,7 @@
                      ng-disabled="_loading"
                      ng-model="model.domain_name"
                      id="domain_name"
-                     placeholder="Domain name">
+                     placeholder="Domain Name">
             </div>
           </div>
           <div class="form-group" ng-if="companies.length > 1">
@@ -137,9 +137,9 @@
                       ng-disabled="_loading">
                 <i class="glyphicon glyphicon-refresh spin" ng-if="_loading"></i>
                 <i class="glyphicon glyphicon-ok" ng-if="!_loading"></i>&nbsp;
-                Create domain
+                Create Domain
               </button>
-              <a ui-sref="{{state}}" class="btn btn-default">
+              <a ui-sref="^" class="btn btn-default">
                 <i class="glyphicon glyphicon-remove"></i>&nbsp;
                 Cancel
               </a>
