--- a/code/dev/parts/domains/configure_advanced.html
+++ b/code/dev/parts/domains/configure_advanced.html
@@ -18,7 +18,7 @@
                    ng-disabled="_loading"
                    class="btn btn-default">
                   <i class="glyphicon glyphicon-arrow-left"></i>&nbsp;
-                  Back to List
+                  Back To List
                 </a>
                 <a ui-sref="index.webApp.domains.edit({id: id})"
                    ng-disabled="_loading"
