--- a/code/dev/parts/help/contactus.html
+++ b/code/dev/parts/help/contactus.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-md-12">
-      <h2>Help and Support</h2>
+      <h2>Help And Support</h2>
     </div>
   </div>
   <div class="row">
