--- a/code/dev/parts/keys/dialog/edit.html
+++ b/code/dev/parts/keys/dialog/edit.html
@@ -11,7 +11,7 @@
     <div class="form-group">
       <label for="key_name"
              class="col-sm-2 control-label"
-      >API Key name</label>
+      >API Key Name</label>
 
       <div class="col-sm-10">
         <input type="text"
@@ -33,7 +33,7 @@
                disabled
                ng-model="key.key"
                id="key"
-               placeholder="Api Key name">
+               placeholder="Api Key Name">
       </div>
     </div>
     <div class="form-group" ng-hide="!companies || companies.length == 1">
@@ -46,7 +46,7 @@
                    ng-disabled="_loading"
                    ng-model="key.account_id"
                    style="width: 100%;">
-          <ui-select-match placeholder="Select account">{{$select.selected.companyName}}</ui-select-match>
+          <ui-select-match placeholder="Select Account">{{$select.selected.companyName}}</ui-select-match>
           <ui-select-choices repeat="item.id as item in companies | filter: {companyName: $select.search}">
             <small>{{item.companyName}}</small>
           </ui-select-choices>
@@ -69,7 +69,7 @@
     <div class="form-group">
       <label for="read_only_status"
              class="col-sm-2 control-label"
-      >Read only</label>
+      >Read Only</label>
 
       <div class="col-sm-10">
         <input type="checkbox"
@@ -88,7 +88,7 @@
                    ng-disabled="_loading"
                    ng-model="key.domains"
                    style="width: 100%;">
-          <ui-select-match placeholder="Select domains">{{$item.domain_name}}</ui-select-match>
+          <ui-select-match placeholder="Select Domains">{{$item.domain_name}}</ui-select-match>
           <ui-select-choices repeat="item.id as item in selectedDomains | filter: {domain_name: $select.search}">
             <small>{{item.domain_name}}</small>
           </ui-select-choices>
