--- a/code/dev/parts/profile/edit.html
+++ b/code/dev/parts/profile/edit.html
@@ -57,7 +57,7 @@
 
             <!--<hr>-->
             <div class="form-group">
-              <label for="current_password" class="col-sm-2 control-label">Current password</label>
+              <label for="current_password" class="col-sm-2 control-label">Current Password</label>
               <div class="col-sm-10">
                 <input type="password"
                        class="form-control"
@@ -70,7 +70,7 @@
               </div>
             </div>
             <div class="form-group">
-              <label for="new_password" class="col-sm-2 control-label">New password</label>
+              <label for="new_password" class="col-sm-2 control-label">New Password</label>
               <div class="col-sm-10">
                 <input type="password"
                        class="form-control"
@@ -82,7 +82,7 @@
               </div>
             </div>
             <div class="form-group">
-              <label for="confirm_password" class="col-sm-2 control-label">Confirm new password</label>
+              <label for="confirm_password" class="col-sm-2 control-label">Confirm New Password</label>
               <div class="col-sm-10">
                 <input type="password"
                        class="form-control"
@@ -99,7 +99,7 @@
               <div class="col-sm-offset-2 col-sm-10">
                 <button class="btn btn-success" ng-disabled="_loading">
                   <i class="glyphicon glyphicon-ok"></i>&nbsp;
-                  Update password
+                  Update Password
                 </button>
               </div>
             </div>
