--- a/code/dev/parts/users/list.html
+++ b/code/dev/parts/users/list.html
@@ -17,7 +17,7 @@
   <div class="row">
     <div class="col-sm-12">
       <h2 class="pull-left page-title">
-        Users list
+        Users List
       </h2>
     </div>
   </div>
@@ -31,7 +31,7 @@
               <div class="pull-left">
                 <a ui-sref=".new" class="btn btn-success" ng-disabled="_loading">
                   <i class="glyphicon glyphicon-plus"></i>&nbsp;
-                  Add new User
+                  Add New User
                 </a>
               </div>
 
