--- a/code/dev/parts/reports/charts/fbt-heatmap.html
+++ b/code/dev/parts/reports/charts/fbt-heatmap.html
@@ -1,4 +1,4 @@
-<h3 style="margin-top: 0;">FBT heatmap</h3>
+<h3 style="margin-top: 0;">FBT Heatmap</h3>
 <div class="clearfix" style="margin-bottom: 8px;">
   <div class="pull-right">
 
@@ -6,16 +6,16 @@
       <div class="form-group">
         <select class="form-control fixed"
                 ng-model="delay">
-          <option value="6">Last 6 hours</option>
-          <option value="12">Last 12 hours</option>
-          <option value="24">Last 24 hours</option>
+          <option value="6">Last 6 Hours</option>
+          <option value="12">Last 12 Hours</option>
+          <option value="24">Last 24 Hours</option>
         </select>
       </div>
 
       <div class="form-group">
         <button class="btn btn-info" ng-click="reloadFBTStats()">
           <i class="glyphicon glyphicon-refresh"></i>&nbsp;
-          Update report
+          Update Report
         </button>
       </div>
     </form>
