--- a/code/parts/reports/charts/fbt-average.html
+++ b/code/parts/reports/charts/fbt-average.html
@@ -6,8 +6,8 @@
       <div class="form-group">
         <select class="form-control fixed"
                 ng-model="delay">
-          <option value="1">Last 1 day</option>
-          <option value="7">Last 7 days</option>
+          <option value="1">Last 1 Day</option>
+          <option value="7">Last 7 Days</option>
         </select>
       </div>
 
@@ -38,7 +38,7 @@
       <div class="form-group">
         <button class="btn btn-info" ng-click="reloadTrafficStats()">
           <i class="glyphicon glyphicon-refresh"></i>&nbsp;
-          Update report
+          Update Report
         </button>
       </div>
     </form>
