--- a/code/parts/reports/charts/fbt-distribution.html
+++ b/code/parts/reports/charts/fbt-distribution.html
@@ -6,9 +6,9 @@
       <div class="form-group">
         <select class="form-control fixed"
                 ng-model="delay">
-          <option value="6">Last 6 hours</option>
-          <option value="12">Last 12 hours</option>
-          <option value="24">Last 24 hours</option>
+          <option value="6">Last 6 Hours</option>
+          <option value="12">Last 12 Hours</option>
+          <option value="24">Last 24 Hours</option>
         </select>
       </div>
 
@@ -39,7 +39,7 @@
       <div class="form-group">
         <button class="btn btn-info" ng-click="reloadTrafficStats()">
           <i class="glyphicon glyphicon-refresh"></i>&nbsp;
-          Update report
+          Update Report
         </button>
       </div>
     </form>
