Fixing the tests to match recent cosmetic fixes

--- a/code/dev/parts/reports/top/top-5xx.html
+++ b/code/dev/parts/reports/top/top-5xx.html
@@ -1,5 +1,5 @@
 
-<h3>Top Objects with 5XX Error Codes</h3>
+<h3>Top Objects With 5XX Error Codes</h3>
 <div filter-top-objects
      ng-hide="!ngDomain"
      fl-os="flOs"
