--- a/code/dev/parts/profile/activity-log.html
+++ b/code/dev/parts/profile/activity-log.html
@@ -25,7 +25,7 @@
       <div class="col-md-9">{{model.activity}}</div>
     </div>
     <hr>
-    <strong>Target object:</strong>
+    <strong>Target Object:</strong>
     <pre class="max-height-pre">
 {{model.target_object}}
     </pre>
@@ -39,7 +39,7 @@
   <div class="row">
     <div class="col-sm-12">
       <h2 class="pull-left page-title">
-        Activity Log (last 40 records)
+        Activity Log (Last 40 Records)
       </h2>
     </div>
   </div>
@@ -72,7 +72,7 @@
             <thead>
             <tr>
               <th>
-                <a href="" ng-click="order('datetime')">Date/time</a>
+                <a href="" ng-click="order('datetime')">Date/Time</a>
                 <span class="sortorder" ng-show="filter.predicate === 'datetime'"
                       ng-class="{reverse: filter.reverse}"></span>
               </th>
