--- a/code/parts/domains/_new.html
+++ b/code/parts/domains/_new.html
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-sm-12">
     <h2 class="pull-left page-title">
-      Add new Domain
+      Add New Domain
     </h2>
   </div>
 </div>
@@ -58,7 +58,7 @@
                       ng-model="model.account_id"
                       id="account_id"
                       ng-options="obj.id as obj.companyName for obj in companies">
-                <option value="">--- Select company ---</option>
+                <option value="">--- Select Company ---</option>
               </select>
             </div>
           </div>
@@ -107,7 +107,7 @@
                       ng-model="model.origin_server_location_id"
                       id="origin_server_location_id"
                       ng-options="obj.id as obj.locationName for obj in locations">
-                <option value="">--- Select location ---</option>
+                <option value="">--- Select Location ---</option>
               </select>
             </div>
           </div>
