--- a/code/parts/domains/new.html
+++ b/code/parts/domains/new.html
@@ -106,7 +106,7 @@
                       ng-model="model.origin_server_location"
                       id="origin_server_location"
                       ng-options="obj.locationName as obj.locationName for obj in locations">
-                <option value="">--- Select location ---</option>
+                <option value="">--- Select Location ---</option>
               </select>
             </div>
           </div>
