--- a/code/parts/reports/charts/mobile-hits.html
+++ b/code/parts/reports/charts/mobile-hits.html
@@ -5,15 +5,15 @@
       <div class="form-group">
         <select class="form-control fixed"
                 ng-model="span">
-          <option value="1">Last 1 day</option>
-          <option value="7">Last 7 days</option>
+          <option value="1">Last 1 Day</option>
+          <option value="7">Last 7 Days</option>
         </select>
       </div>
 
       <div class="form-group">
         <button class="btn btn-info" ng-click="reloadTrafficStats()">
           <i class="glyphicon glyphicon-refresh"></i>&nbsp;
-          Update report
+          Update Report
         </button>
       </div>
     </form>
