--- a/code/dev/parts/reports/top-reports.html
+++ b/code/dev/parts/reports/top-reports.html
@@ -49,7 +49,7 @@
                   <div class="form-group">
                     <button class="btn btn-info" ng-click="onDomainSelected()">
                       <i class="glyphicon glyphicon-refresh"></i>&nbsp;
-                      Update reports
+                      Update Reports
                     </button>
                   </div>
                 </form>
