--- a/code/dev/parts/reports/mobile-tops.html
+++ b/code/dev/parts/reports/mobile-tops.html
@@ -40,7 +40,7 @@
                   <div class="form-group">
                     <button class="btn btn-info" ng-click="reload()">
                       <i class="glyphicon glyphicon-refresh"></i>&nbsp;
-                      Update reports
+                      Update Reports
                     </button>
                   </div>
                 </form>
