--- a/code/parts/reports/mobile-distributions.html
+++ b/code/parts/reports/mobile-distributions.html
@@ -168,7 +168,7 @@
 
           <div class="row">
             <div class="col-md-12">
-              <h3>Domain Ratio By Requests</h3>
+              <h3>Top 10 Domains By Requests</h3>
               <div class="alert alert-info" ng-hide="_loading || domain_hits.length">
                 No data to display
               </div>
@@ -183,7 +183,7 @@
           <hr>
           <div class="row">
             <div class="col-md-12">
-              <h3>Domain Ratio By Traffic</h3>
+              <h3>Top 10 Domains By Traffic</h3>
               <div class="alert alert-info" ng-hide="_loading || domain_gbt.length">
                 No data to display
               </div>
@@ -198,7 +198,7 @@
           <hr>
           <div class="row">
             <div class="col-md-12">
-              <h3>HTTP Status Codes By Requests</h3>
+              <h3>Top 10 HTTP Status Codes</h3>
               <div class="alert alert-info" ng-hide="_loading || status_code_hits.length">
                 No data to display
               </div>
