--- a/code/dev/parts/reports/mobile-tops.html
+++ b/code/dev/parts/reports/mobile-tops.html
@@ -264,7 +264,48 @@
                 <div style="min-width: 480px; min-height: 350px" pie-chart ng-data="network_gbt" ng-chart-options="gbtChartOpts"></div>
               </div>
             </div>
+            <div class="col-md-6">
+              <h3>Top 10 Domains By Requests</h3>
+              <div class="alert alert-info" ng-hide="_loading || domain_hits.length">
+                No data to display
+              </div>
+              <div class="alert alert-info" ng-hide="!_loading">
+                <i class="glyphicon glyphicon-refresh spin"></i>&nbsp; Loading
+              </div>
+              <div ng-hide="_loading || !domain_hits.length">
+                <div style="min-width: 480px; min-height: 350px" pie-chart ng-data="domain_hits" ng-chart-options="hitsChartOpts"></div>
+              </div>
+            </div>
           </div>
+          <hr>
+
+          <div class="row">
+            <div class="col-md-6">
+              <h3>Top 10 Domains By Traffic</h3>
+              <div class="alert alert-info" ng-hide="_loading || domain_gbt.length">
+                No data to display
+              </div>
+              <div class="alert alert-info" ng-hide="!_loading">
+                <i class="glyphicon glyphicon-refresh spin"></i>&nbsp; Loading
+              </div>
+              <div ng-hide="_loading || !domain_gbt.length">
+                <div style="min-width: 480px; min-height: 350px" pie-chart ng-data="domain_gbt" ng-chart-options="gbtChartOpts"></div>
+              </div>
+            </div>
+            <div class="col-md-6">
+              <h3>Top 10 HTTP Status Codes</h3>
+              <div class="alert alert-info" ng-hide="_loading || status_code_hits.length">
+                No data to display
+              </div>
+              <div class="alert alert-info" ng-hide="!_loading">
+                <i class="glyphicon glyphicon-refresh spin"></i>&nbsp; Loading
+              </div>
+              <div ng-hide="_loading || !status_code_hits.length">
+                <div style="min-width: 480px; min-height: 350px" pie-chart ng-data="status_code_hits" ng-chart-options="hitsChartOpts"></div>
+              </div>
+            </div>
+          </div>
+
 
         </div>
 
