Cosmetic changes in accordance with Ron's recommendations

--- a/code/dev/parts/companies/list.html
+++ b/code/dev/parts/companies/list.html
@@ -75,7 +75,7 @@
                 <a href="" ng-click="order('created_at')">Created At</a>
                 <span class="sortorder" ng-show="filter.predicate === 'created_at'" ng-class="{reverse: filter.reverse}"></span>
               </th>
-              <th></th>
+              <th>Actions</th>
             </tr>
             </thead>
             <tbody>
