--- a/code/dev/parts/domains/_list.html
+++ b/code/dev/parts/domains/_list.html
@@ -98,11 +98,11 @@
                 <span class="sortorder" ng-show="filter.predicate === 'cname'" ng-class="{reverse: filter.reverse}"></span>
               </th>
               <th>
-                <a href="" ng-click="order('updated_at')">Last Updated</a>
+                <a href="" ng-click="order('updated_at')">Last Update</a>
                 <span class="sortorder" ng-show="filter.predicate === 'updated_at'" ng-class="{reverse: filter.reverse}"></span>
               </th>
               <th class="thin">Status</th>
-              <th></th>
+              <th>Actions</th>
             </tr>
             </thead>
             <tbody>
