--- a/code/dev/parts/users/list.html
+++ b/code/dev/parts/users/list.html
@@ -69,7 +69,7 @@
                 <a href="" ng-click="order('role')">Role</a>
                 <span class="sortorder" ng-show="filter.predicate === 'role'" ng-class="{reverse: filter.reverse}"></span>
               </th>
-              <th></th>
+              <th>Actions</th>
             </tr>
             </thead>
             <tbody>
