--- a/code/dev/parts/apps/list.html
+++ b/code/dev/parts/apps/list.html
@@ -101,12 +101,12 @@
                 <span class="sortorder" ng-show="filter.predicate === 'last_app_published_version'" ng-class="{reverse: filter.reverse}"></span>
               </th>
               <th>
-                <a href="" ng-click="order('updated_at')">Last Updated At</a>
+                <a href="" ng-click="order('updated_at')">Last Update</a>
                 <span class="sortorder" ng-show="filter.predicate === 'updated_at'" ng-class="{reverse: filter.reverse}"></span>
               </th>
               <th>SDK Key</th>
               <th class="thin">Status</th>
-              <th></th>
+              <th>Actions</th>
             </tr>
             </thead>
             <tbody>
