--- a/code/parts/keys/list.html
+++ b/code/parts/keys/list.html
@@ -58,7 +58,7 @@
                 <span class="sortorder" ng-show="filter.predicate === 'key_name'" ng-class="{reverse: filter.key_name}"></span>
               </th>
               <th>
-                <a href="" ng-click="order('key')">Key</a>
+                <a href="" ng-click="order('key')">API Key</a>
                 <span class="sortorder" ng-show="filter.predicate === 'key'" ng-class="{reverse: filter.key}"></span>
               </th>
               <th>
@@ -69,7 +69,7 @@
                 <a href="" ng-click="order('active')">Active</a>
                 <span class="sortorder" ng-show="filter.predicate === 'active'" ng-class="{reverse: filter.active}"></span>
               </th>
-              <th class="actions"></th>
+              <th class="actions">Actions</th>
             </tr>
             </thead>
             <tbody>
