domain/app name to edit screen

--- a/code/dev/parts/apps/list.html
+++ b/code/dev/parts/apps/list.html
@@ -112,7 +112,11 @@
             <tbody>
             <tr
               ng-repeat="item in filteredRecords | limitTo:filter.limit:filter.skip track by $index">
-              <td>{{item.app_name}}</td>
+              <td>
+                <a ui-sref=".edit({id: item.id})" ng-if="!item.loading" tooltip="Edit App">
+                  {{item.app_name}}
+                </a>
+              </td>
               <td>{{item.app_platform}}</td>
               <td>{{item.last_app_published_version}}</td>
               <td>{{item.updated_at | date : 'MMM dd, yyyy H:mm:ss a'}}</td>
