--- a/code/dev/parts/domains/list.html
+++ b/code/dev/parts/domains/list.html
@@ -108,7 +108,11 @@
             <tbody>
             <tr
               ng-repeat="item in filteredRecords | limitTo:filter.limit:filter.skip track by $index">
-              <td>{{item.domain_name}}</td>
+              <td>
+                <a ui-sref=".edit({id: item.id})" ng-if="!item.loading" tooltip="Edit domain">
+                  {{item.domain_name}}
+                </a>
+              </td>
               <td>{{item.cname}}</td>
               <td>{{item.updated_at | date : 'MMM dd, yyyy H:mm:ss a'}}</td>
               <td>
