--- a/code/dev/parts/domains/list.html
+++ b/code/dev/parts/domains/list.html
@@ -109,7 +109,7 @@
             <tr
               ng-repeat="item in filteredRecords | limitTo:filter.limit:filter.skip track by $index">
               <td>
-                <a ui-sref=".edit({id: item.id})" ng-if="!item.loading" tooltip="Edit domain">
+                <a ui-sref=".edit({id: item.id})" ng-if="!item.loading" tooltip="Edit Domain">
                   {{item.domain_name}}
                 </a>
               </td>
@@ -120,19 +120,19 @@
               </td>
               <td class="actions">
                 <i class="glyphicon glyphicon-refresh spin" ng-if="item.loading"></i>
-                <a ui-sref=".edit({id: item.id})" ng-if="!item.loading" tooltip="Edit domain">
+                <a ui-sref=".edit({id: item.id})" ng-if="!item.loading" tooltip="Edit Domain">
                   <i class="glyphicon glyphicon-pencil"></i>
                 </a>
-                <a ui-sref=".advanced({id: item.id})" ng-if="!item.loading" tooltip="Advanced edit domain">
+                <a ui-sref=".advanced({id: item.id})" ng-if="!item.loading" tooltip="Advanced Edit Domain">
                   <i class="glyphicon glyphicon-cog"></i>
                 </a>
-                <a href="" ng-if="!item.loading" ng-click="deleteDomain(item)" tooltip="Delete domain">
+                <a href="" ng-if="!item.loading" ng-click="deleteDomain(item)" tooltip="Delete Domain">
                   <i class="glyphicon glyphicon-trash"></i>
                 </a>
                 <a href="#/reports/proxy" ng-if="!item.loading" ng-click="storeToStorage(item)" tooltip="Stats">
                   <i class="glyphicon glyphicon-stats"></i>
                 </a>
-                <a ui-sref=".versions({id: item.id})" ng-if="!item.loading" tooltip="Historical versions">
+                <a ui-sref=".versions({id: item.id})" ng-if="!item.loading" tooltip="Historical Versions">
                   <i class="glyphicon glyphicon-book"></i>
                 </a>
               </td>
