--- a/code/dev/parts/companies/edit.html
+++ b/code/dev/parts/companies/edit.html
@@ -43,7 +43,7 @@
             <div class="col-sm-offset-2 col-sm-10">
               <button class="btn btn-success" ng-disabled="_loading">
                 <i class="glyphicon glyphicon-ok"></i>&nbsp;
-                Update Company
+                Update
               </button>
               <a ui-sref="^" class="btn btn-default">
                 <i class="glyphicon glyphicon-remove"></i>&nbsp;
