--- a/code/dev/parts/domains/edit.html
+++ b/code/dev/parts/domains/edit.html
@@ -157,21 +157,21 @@
                       ng-click="validateDomain(model)">
                 <i class="glyphicon glyphicon-refresh spin" ng-if="_loading"></i>
                 <i class="glyphicon glyphicon-ok" ng-if="!_loading"></i>&nbsp;
-                Validate Domain
+                Varify
               </button>
               <button class="btn btn-success"
                       ng-disabled="_loading"
                       ng-click="updateDomain(model)">
                 <i class="glyphicon glyphicon-refresh spin" ng-if="_loading"></i>
                 <i class="glyphicon glyphicon-ok" ng-if="!_loading"></i>&nbsp;
-                Update Domain
+                Update
               </button>
               <button class="btn btn-success"
                       ng-disabled="_loading"
                       ng-click="publishDomain(model)">
                 <i class="glyphicon glyphicon-refresh spin" ng-if="_loading"></i>
                 <i class="glyphicon glyphicon-ok" ng-if="!_loading"></i>&nbsp;
-                Publish Domain
+                Publish
               </button>
               <a ui-sref="^" class="btn btn-default">
                 <i class="glyphicon glyphicon-remove"></i>&nbsp;
