--- a/code/parts/users/edit.html
+++ b/code/parts/users/edit.html
@@ -170,7 +170,7 @@
                       ng-disabled="_loading"
                       ng-click="updateUser(model)">
                 <i class="glyphicon glyphicon-ok"></i>&nbsp;
-                Update User
+                Update
               </button>
               <a ui-sref="^" class="btn btn-default">
                 <i class="glyphicon glyphicon-remove"></i>&nbsp;
