--- a/code/parts/users/list.html
+++ b/code/parts/users/list.html
@@ -79,10 +79,10 @@
               <td>{{user.email}}</td>
               <td>{{user.role}}</td>
               <td class="actions">
-                <a ui-sref=".edit({id: user.user_id})" tooltip="Edit user">
+                <a ui-sref=".edit({id: user.user_id})" tooltip="Edit User">
                   <i class="glyphicon glyphicon-pencil"></i>
                 </a>
-                <a href="" ng-click="deleteUser(user)" tooltip="Delete user">
+                <a href="" ng-click="deleteUser(user)" tooltip="Delete User">
                   <i class="glyphicon glyphicon-trash"></i>
                 </a>
               </td>
