--- a/code/dev/parts/reports/charts/mobile-base-top-objects.html
+++ b/code/dev/parts/reports/charts/mobile-base-top-objects.html
@@ -31,7 +31,7 @@
       <table class="table">
         <thead>
         <tr>
-          <th>Path</th>
+          <th>URL</th>
           <th style="width: 10%;">Requests</th>
         </tr>
         </thead>
