--- a/code/dev/parts/reports/mobile-top-objects.html
+++ b/code/dev/parts/reports/mobile-top-objects.html
@@ -126,6 +126,21 @@
           </div>
           <hr>
 
+          <div class="row">
+            <div class="col-lg-12">
+              <div mobile-top-objects-5xx
+                   ng-account="account"
+                   ng-app="application"
+                   fl-oses="oses"
+                   fl-devices="devices"
+                   fl-countries="countries"
+                   fl-operators="operators"
+                   fl-networks="networks"
+                   heading="Top Objects With 5XX Error Codes"></div>
+            </div>
+          </div>
+          <hr>
+
         </div>
       </div>
     </div>
