--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -59,6 +59,7 @@
 <script type="text/javascript" src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
 <script type="text/javascript" src="bower_components/angular-chart.js/dist/angular-chart.min.js"></script>
 <script type="text/javascript" src="bower_components/ui-select/dist/select.min.js"></script>
+<script type="text/javascript" src="bower_components/angular-sanitize/angular-sanitize.min.js"></script>
 
 <script type="text/javascript" src="bower_components/highlightjs/highlight.pack.js"></script>
 <script type="text/javascript" src="bower_components/angular-highlightjs/src/angular-highlightjs.js"></script>
@@ -127,6 +128,7 @@
 <script type="text/javascript" src="js/portal/apps/controller/appVersions.controller.js"></script>
 <script type="text/javascript" src="js/portal/apps/controller/appEdit.controller.js"></script>
 <script type="text/javascript" src="js/portal/apps/app-staging-status/appStagingStatus.directive.js"></script>
+<script type="text/javascript" src="js/portal/apps/app-select/appSelect.directive.js"></script>
 
 <script type="text/javascript" src="js/portal/domains/domains.module.js"></script>
 <script type="text/javascript" src="js/portal/domains/domains.routes.js"></script>
