Mobile analytics, A/B reports, fbt

--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -45,6 +45,7 @@
 <script type="text/javascript" src="bower_components/Chart.js/Chart.js"></script>
 <script type="text/javascript" src="bower_components/moment/min/moment.min.js"></script>
 <script type="text/javascript" src="bower_components/highcharts/js/highcharts.js"></script>
+<script type="text/javascript" src="bower_components/highcharts/js/highcharts-more.js"></script>
 <script type="text/javascript" src="bower_components/d3/d3.min.js"></script>
 <script type="text/javascript" src="bower_components/topojson/topojson.js"></script>
 
@@ -197,6 +198,9 @@
 <script type="text/javascript" src="js/portal/reports/controller/mobileTops.controller.js"></script>
 <script type="text/javascript" src="js/portal/reports/controller/mobileDistributions.controller.js"></script>
 <script type="text/javascript" src="js/portal/reports/controller/mobileTopObjects.controller.js"></script>
+
+<script type="text/javascript" src="js/portal/reports/controller/mobileAb.controller.js"></script>
+<script type="text/javascript" src="js/portal/reports/chart/mobileABFBTChart.directive.js"></script>
 
 <script type="text/javascript" src="js/portal/keys/keys.module.js"></script>
 <script type="text/javascript" src="js/portal/keys/keys.routes.js"></script>
