Add signup pages

--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -110,6 +110,12 @@
 
 <script type="text/javascript" src="js/portal/auth/block/blockUserLoginLogout.directive.js"></script>
 
+<script type="text/javascript" src="js/portal/signup/signup.module.js"></script>
+<script type="text/javascript" src="js/portal/signup/controller/signup.controller.js"></script>
+<script type="text/javascript" src="js/portal/signup/signup.routes.js"></script>
+
+<script type="text/javascript" src="js/portal/resources/model/billingPlans.factory.js"></script>
+
 <script type="text/javascript" src="js/portal/profile/profile.module.js"></script>
 <script type="text/javascript" src="js/portal/profile/profile.routes.js"></script>
 <script type="text/javascript" src="js/portal/profile/controller/profileEdit.controller.js"></script>
