Capitalize Field Labels

--- a/code/dev/parts/signup/signup.html
+++ b/code/dev/parts/signup/signup.html
@@ -17,7 +17,7 @@
                     <div class="col-md-12">
                         <div class="pull-left">
                             <h2 class="">
-                                Sign up
+                                Sign Up
                             </h2>
                         </div>
                     </div>
@@ -107,7 +107,7 @@
                         <label for="phoneNumber"
                                class="col-sm-2 control-label"
                                popover-trigger="mouseenter"
-                               popover="Phone number">Phone number</label>
+                               popover="Phone number">Phone Number</label>
 
                         <div class="col-sm-10">
                             <input type="text"
@@ -236,7 +236,7 @@
                             <button class="btn btn-success"
                                     ng-disabled="_loading"
                                     ng-click="createUser(model)">
-                                Verify email
+                                Verify Email
                             </button>
                         </div>
                     </div>
