--- a/code/parts/signup/billing_plans.html
+++ b/code/parts/signup/billing_plans.html
@@ -17,7 +17,7 @@
                         <div class="col-md-12">
                             <div class="pull-left">
                                 <h2 class="">
-                                    Billing plans
+                                    Billing Plans
                                 </h2>
                             </div>
                         </div>
