--- a/code/dev/parts/signup/verify.html
+++ b/code/dev/parts/signup/verify.html
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="col-sm-12">
             <h2 class="pull-left page-title">
-                Sign up
+                Sign Up
             </h2>
         </div>
     </div>
